# Version 0.1.2 - 2024-03-05
- [fix][minor] Pin macro version to exact same version as main crate.

# Version 0.1.1 - 2024-03-05
- [add][minor] Allow query function to return `Result<(), E>`.
- [add][patch] Add documentation.

# Version 0.1.0 - 2024-03-04
- [add][major] Initial with support for `tokio_postgres` only.