@@ -1,3 +1,6 @@
+# Unreleased
+- [fix][minor] Combine consecutive punctuation tokens in queries into a single string without space between the punctuation.
+
 # Version 0.1.2 - 2024-03-05
 - [fix][minor] Pin macro version to exact same version as main crate.
 
